@@ -41,6 +41,8 @@ public:
     sigc::signal<void, gig::DimensionRegion*>& signal_dimreg_to_be_changed();
     sigc::signal<void, gig::DimensionRegion*>& signal_dimreg_changed();
     sigc::signal<void, gig::Sample*/*old*/, gig::Sample*/*new*/>& signal_sample_ref_changed();
+    sigc::signal<void, int/*key*/, int/*velocity*/>& signal_keyboard_key_hit();
+    sigc::signal<void, int/*key*/, int/*velocity*/>& signal_keyboard_key_released();
 
     void on_note_on_event(int key, int velocity);
     void on_note_off_event(int key, int velocity);
@@ -55,6 +57,8 @@ private:
     sigc::signal<void, gig::DimensionRegion*> dimreg_to_be_changed_signal;
     sigc::signal<void, gig::DimensionRegion*> dimreg_changed_signal;
     sigc::signal<void, gig::Sample*/*old*/, gig::Sample*/*new*/> sample_ref_changed_signal;
+    sigc::signal<void, int/*key*/, int/*velocity*/> keyboard_key_hit_signal;
+    sigc::signal<void, int/*key*/, int/*velocity*/> keyboard_key_released_signal;
     void* state;
 };
 
